# queens-gadt

./: README.md  hie.yaml  hie.yml  queens-gadt.cabal  shell.nix  stack.yaml
src/: GameState.hs  Main.hs  Movement.hs  Rendering.hs  Types.hs
test/: Main.hs
test/Test/: GameState.hs  Movement.hs  Types.hs
