name:                queens-gadt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shawn-bachlet/queens-gadt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable queens-gadt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , gloss
                     , gloss-juicy
                     , JuicyPixels
  other-modules: GameState,
                 Types,
                 Movement

library queens-gadt-core
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , gloss
                     , gloss-juicy
                     , JuicyPixels
  exposed-modules:     GameState
                     , Types
                     , Movement

test-suite queens-gadt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , queens-gadt
                     , containers
                     , lens
                     , mtl
                     , gloss
                     , gloss-juicy
                     , JuicyPixels
                     , time
                     , HUnit
  other-modules:       Test.Types
                     , Test.GameState
                     , Test.Movement
